--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,10 @@
 # Read the Docs configuration file for Sphinx projects
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
+
+# Specify the version of Python to use
+python: 3.7
 
 # Set the OS, Python version and other tools you might need
 build:
